save state machine start

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,9 +14,11 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'androidx.core:core-ktx:+'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'org.openftc:easyopencv:1.5.2'
 	implementation 'org.openftc:apriltag:1.0.0'
